--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,11 +36,11 @@
       </tbody>
     </table>
   </div>
-  <div class="full-width" *ngIf="employees && employees.size">
+  <!-- <div class="full-width" *ngIf="employees && employees.size">
     <button type="button" class="btn btn-primary float-right margin-top-20 margin-bottom-20" (click)="saveData()">
       Save
     </button>
-  </div>
+  </div> -->
 </div>
 
 <!-- Modal Code -->
